@startuml 07_architecture
skinparam linetype polyline
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam ArrowColor #555555
skinparam ClassBorderColor #444444
skinparam ClassBackgroundColor #FAFAFA
skinparam PackageBorderColor #888888

title GPU Ray Tracer — Architecture

' ── Application ─────────────────────────
package "Application" {
    class RayTracerApplication
}

' ── Core ────────────────────────────────
package "Core" {
    class Scene
    class FrameBuffer
    class SceneLoader <<utility>>
}

' ── Rendering ───────────────────────────
package "Rendering" {
    class RendererContext
    class Renderer
    class VkCore
}

' ── Acceleration Structures ─────────────
package "Acceleration Structures" {
    abstract class AccelerationStruct
    class BruteForce

    together {
        class BVH
        interface IBVHBuilder
        class MiddlePointBuilder
        class SAHBuilder
    }

    together {
        class KDTree
        interface IKDTreeBuilder
        class BinnedSAHBuilder
        class ExactSAHBuilder
    }
}

' ── Relationships ───────────────────────
RayTracerApplication *-- Scene
RayTracerApplication *-- FrameBuffer
RayTracerApplication *-- Renderer
RayTracerApplication ..> RendererContext : constructs

SceneLoader ..> Scene : produces
RendererContext --> Scene

Renderer *-- VkCore
Renderer o-- AccelerationStruct
Renderer ..> RendererContext : uses
Renderer ..> FrameBuffer    : writes

AccelerationStruct <|-- BruteForce
AccelerationStruct <|-- BVH
AccelerationStruct <|-- KDTree

BVH o-- IBVHBuilder
IBVHBuilder <|.. MiddlePointBuilder
IBVHBuilder <|.. SAHBuilder

KDTree o-- IKDTreeBuilder
IKDTreeBuilder <|.. BinnedSAHBuilder
IKDTreeBuilder <|.. ExactSAHBuilder

@enduml
